Created CRON job, fixed postgres sql encoding, writed swagger documentation, fixed some issue with /cities post request
